--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -59,11 +54,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -75,11 +65,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -91,11 +76,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">A very long bridge, over the forest</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -107,11 +87,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -123,11 +98,6 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
-                <!-- <p class="card__description">
-                  Val Thorens is a ski resort located in the Tarentaise Valley,
-                  Savoie, French Alps, situated in the commune of
-                  Saint-Martin-de-Belleville -->
-                </p>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
@@ -135,7 +105,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p>2025 &copy; Spots</p>
+        <p class="footer__text">2025 &copy; Spots</p>
       </footer>
     </div>
   </body>
