--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               Name
               <input
                 type="text"
-                id="name"
+                id="profile-name-input"
                 name="name"
                 class="modal__input"
                 placeholder="Enter your name"
@@ -126,7 +126,7 @@
               Description
               <input
                 type="text"
-                id="description"
+                id="profile-description-input"
                 name="description"
                 class="modal__input"
                 placeholder="Enter your description"
@@ -165,7 +165,7 @@
               Caption
               <input
                 type="text"
-                id="description"
+                id="card-description-input"
                 name="description"
                 class="modal__input"
                 placeholder="Type your caption"
