--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       <footer class="footer">
         <p class="footer__text">2025 &copy; Spots</p>
       </footer>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__content">
-          <button type="button" class="modal__close-btn"></button>
+          <button type="button" class="modal__close-btn">X</button>
           <h2 class="modal__title">Edit Profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">
@@ -146,7 +146,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__content">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
@@ -186,5 +186,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
