--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__text">2025 &copy; Spots</p>
+        <p class="footer__text">2025 &copy; Rashad Mayo</p>
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__content">
-          <button type="button" class="modal__close-btn">X</button>
+          <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit Profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label">
